--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=your-mongodb-connection-string
+MONGO_URI=mongodb+srv://pranjalidas2201:wLdOErdwZKiU5c0H@cluster0.rjwmfhp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
