--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,9 @@
   "author": "Pranjali",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "mongodb": "^6.15.0",
     "mongoose": "^7.6.3"
