--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
+    "foodrescue-backend": "file:",
     "mongodb": "^6.15.0",
     "mongoose": "^7.6.3"
   },
